# snail

./: .gitignore  Cargo.toml  README.md
input/: example.js  test
src/: file.rs  global.rs  main.rs  parser.rs
src/ast/: directive.rs  expression.rs  import_export_declaration.rs  mod.rs  pattern.rs  statement.rs
src/statement/: lval.rs  mod.rs  scope.rs  util.rs
src/statement/expression/: array.rs  assignment.rs  binary.rs  class.rs  conditional.rs  function.rs  import.rs  literal.rs  mod.rs  new.rs  object.rs  paren.rs  postfix.rs  subscript.rs  super_property.rs  template.rs  unary.rs  util.rs
src/tokenizer/: context.rs  js_token.rs  mod.rs  number.rs  opearor.rs  regex.rs  space.rs  string.rs  template.rs  util.rs
