[package]
name = "snail"
version = "0.1.0"
edition = "2021"
default-run = "snail"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
lazy_static = "1.4.0"
serde =  { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.94"